# Activida-6-Algoritmos

./: CMakeLists.txt  README.md  main.cpp  sonar-project.properties  text_analysis.cpp  text_analysis.h
TC2038_Situacion_Problema-main/: CMakeLists.txt
TC2038_Situacion_Problema-main/Situacion_Problema/: Team.txt  main.cpp
TC2038_Situacion_Problema-main/test/: test_detect.cpp
test/: test_1.cpp  test_10.cpp  test_2.cpp  test_3.cpp  test_4.cpp  test_5.cpp  test_6.cpp  test_8.cpp  test_9.cpp  test_part1.cpp  test_part2.cpp  test_part3.cpp  test_text_analysis.cpp  test_text_analysis.cpp.cpp  test_text_analysis2.cpp
